# game-engine

./: .gitignore  CMakeLists.txt  GameEngine.sln  Makefile  README.md  json_moving_100.json  json_static_10.json  json_static_100.json  merged.json  run.sh  string_moving_10.json  string_static_100.json  t.sh
Dependencies/include/ZMQ/: zmq.hpp
Dependencies/lib/: libzmq-v143-mt-gd-4_3_5.lib
Game/: Game.vcxproj
GameEngine/: GameEngine.vcxproj  GameEngine.vcxproj.filters  RunPeerServer.cpp  RunServer.cpp  main.cpp
GameEngine/Collision/: CollisionSystem.cpp  CollisionSystem.h
GameEngine/Core/: GameEngine.cpp  GameEngine.h  Globals.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
GameEngine/Entities/: Entity.cpp  Entity.h  MovableEntity.cpp  MovableEntity.h  TextureCache.cpp  TextureCache.h
GameEngine/Events/: CollisionEvent.cpp  DeathEvent.cpp  EntityUpdateEvent.cpp  Event.cpp  Event.h  EventManager.cpp  EventManager.h  InputEvent.cpp  ReplayEvent.cpp  SpawnEvent.cpp  TypedEventHandler.cpp  TypedEventHandler.h
GameEngine/Input/: InputManager.cpp  InputManager.h
GameEngine/Networking/: Client.cpp  Client.h  Peer.cpp  Peer.h  PeerServer.cpp  PeerServer.h  Server.cpp  Server.h
GameEngine/Physics/: PhysicsSystem.cpp  PhysicsSystem.h
GameEngine/Replay/: Replay.cpp  Replay.h  ReplaySystem.cpp  ReplaySystem.h
GameEngine/TimeSystem/: Timeline.cpp  Timeline.h
GameEngine/Zones/: ZoneManager.cpp  ZoneManager.h
GameEngine/Zones/SideScroller/: SideScroller.cpp  SideScroller.h
t/: json_moving_10.json  json_moving_1000.json  json_static_1000.json  string_moving_100.json  string_moving_1000.json  string_static_10.json  string_static_1000.json
